<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.HomeFragment"
    style="@style/background">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/fab"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_invert_colors"
        app:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

    <TextView
        style="@style/agri"
        android:text="@string/agri"

        app:layout_constraintBottom_toTopOf="@+id/textWelcome"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <TextView
        android:id="@+id/textView"
        android:text="@string/share"

        app:layout_constraintBottom_toTopOf="@+id/textWelcome"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        style="@style/share" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintEnd_toStartOf="@+id/textWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textWelcome"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textWelcome"
        style="@style/textViews"
        android:background="@drawable/dummyg"
        android:maxHeight="400dp"
        android:maxWidth="300dp"

        android:layout_marginBottom="56dp"
        android:text="@string/welcomeMessage"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/sign_inBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>