<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ShareFragment"
    style="@style/background">

    <View
        android:id="@+id/view"
        style="@style/Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/AGRI"
            android:text="@string/agri"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/LUPA"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509"
            style="@style/smallAgri"></TextView>

        <TextView
            android:id="@+id/SHARE"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/LUPA"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/AGRI"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509"
            style="@style/smallShare"></TextView>

        <ImageView
            android:id="@+id/LUPA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.535"
            app:srcCompat="@drawable/baseline_search"
            app:tint="#FFFF"
            style="@style/lupaHeader" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->
    <!--    1     -->
    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/agrupamento1"
        app:layout_constraintTop_toBottomOf="@+id/agrupamento2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/agrupamentoShare">


        <ImageView
            android:id="@+id/productImage1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/farm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/product1"
            style="@style/textViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/share_product3"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/qtd1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productImage1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.250">

        </TextView>

        <TextView
            android:id="@+id/qtd1"
            app:layout_constraintVertical_bias="0.600"
            style="@style/textViews"
            android:text="@string/share_qtd3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/product1"
            app:layout_constraintStart_toStartOf="@+id/product1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"

            ></TextView>

        <ImageView
            android:id="@+id/icone1"
            android:layout_width="30dp"
            android:layout_height="30dp"


            app:layout_constraintBottom_toBottomOf="@+id/qtd1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boy" />

        <TextView
            android:id="@+id/TESTENOME1"

            android:layout_marginTop="10dp"

            android:text="@string/share_name3"
            app:layout_constraintBottom_toBottomOf="@+id/icone1"
            app:layout_constraintEnd_toStartOf="@+id/icone1"
            app:layout_constraintTop_toTopOf="@+id/icone1"
            style="@style/textViews"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/btnContact1"
            style="@style/Btn"

            android:text="@string/contactBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qtd1">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->
    <!--    2    -->
    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/agrupamento2"
        app:layout_constraintTop_toBottomOf="@+id/agrupamento3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/agrupamentoShare">


        <ImageView
            android:id="@+id/productImage2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/farm_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/product2"
            style="@style/textViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/share_product2"
            app:layout_constraintHorizontal_bias="0.0"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/qtd2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productImage2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.250">

        </TextView>

        <TextView
            android:id="@+id/qtd2"

            style="@style/textViews"
            android:text="@string/share_qtd2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/product2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/product2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.587"></TextView>

        <ImageView
            android:id="@+id/icone2"
            android:layout_width="30dp"
            android:layout_height="30dp"


            app:layout_constraintBottom_toBottomOf="@+id/qtd2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/girl" />

        <TextView
            android:id="@+id/TESTENOME2"

            android:layout_marginTop="10dp"

            android:text="@string/share_name2"
            app:layout_constraintBottom_toBottomOf="@+id/icone2"
            app:layout_constraintEnd_toStartOf="@+id/icone2"
            app:layout_constraintTop_toTopOf="@+id/icone2"
            style="@style/textViews"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/btnContact2"
            style="@style/Btn"
            android:text="@string/contactBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qtd2">

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->
    <!--    3    -->
    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/agrupamento3"

        app:layout_constraintTop_toBottomOf="@+id/agrupamento4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/agrupamentoShare">


        <ImageView
            android:id="@+id/productImage3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/sheep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/product3"
            style="@style/textViews"
            android:layout_marginStart="20dp"
            android:text="@string/share_product1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/qtd3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/productImage3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235">

        </TextView>

        <TextView
            android:id="@+id/qtd3"

            android:text="@string/share_qtd1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/product3"
            app:layout_constraintStart_toStartOf="@+id/product3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.600"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/textViews"
            ></TextView>

        <ImageView
            android:id="@+id/icone3"
            android:layout_width="30dp"
            android:layout_height="30dp"


            app:layout_constraintBottom_toBottomOf="@+id/qtd3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bussiness" />

        <TextView
            android:id="@+id/TESTENOME3"

            android:layout_marginTop="10dp"

            android:text="@string/share_name1"
            app:layout_constraintBottom_toBottomOf="@+id/icone3"
            app:layout_constraintEnd_toStartOf="@+id/icone3"
            app:layout_constraintTop_toTopOf="@+id/icone3"
            style="@style/textViews"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/btnContact3"
            style="@style/Btn"
            android:text="@string/contactBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qtd3">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->
    <!--    4    -->
    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/agrupamento4"

        app:layout_constraintBottom_toTopOf="@+id/agrupamento3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        style="@style/agrupamentoShare">

        <ImageView
            android:id="@+id/productImage4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/banana"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/product4"
            style="@style/textViews"
            android:layout_marginStart="20dp"
            android:text="placeholder product"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/qtd4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/productImage4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.250"
            >

        </TextView>

        <TextView
            android:id="@+id/qtd4"
            style="@style/textViews"
            android:text="placeholder qtd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/product4"
            app:layout_constraintStart_toStartOf="@+id/product4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.600"></TextView>

        <ImageView
            android:id="@+id/icone4"
            android:layout_width="30dp"
            android:layout_height="30dp"


            app:layout_constraintBottom_toBottomOf="@+id/qtd4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boy" />

        <TextView
            android:id="@+id/TESTENOME4"
            style="@style/textViews"
            android:layout_marginTop="10dp"
            android:textSize="16dp"

            android:text="placeholder name"
            app:layout_constraintBottom_toBottomOf="@+id/icone4"
            app:layout_constraintEnd_toStartOf="@+id/icone4"
            app:layout_constraintTop_toTopOf="@+id/icone4" />

        <Button
            android:id="@+id/btnContact4"
            style="@style/Btn"
            android:text="@string/contactBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qtd4">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->
    <!--    FAB    -->
    <!-- //////////////////////////////////////////////////////////-->
    <!-- //////////////////////////////////////////////////////////-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:src="@drawable/baseline_post_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white"
            app:elevation="100dp"
            style="@style/fab" />

    <!-- Inside your FragmentShareBinding layout file -->


</androidx.constraintlayout.widget.ConstraintLayout>